syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.globalproperties.support.input";

import "google/protobuf/any.proto";


message GlobalPropertyIdInput {
    google.protobuf.Any id = 1;
}

message GlobalPropertyDimensionInput {
    GlobalPropertyIdInput globalPropertyId = 1;
    double assignmentTime = 2;
    repeated google.protobuf.Any values = 3;
}
